test/TestPhases/exportinference/valid/importinternal.blc

import internal i "../imports/internal"
import internal ni "../imports/notinternal"

internal module exposes aReturnsS

activity aReturnsS (x: ni.S) returns i.S
    await true 
    return i.f()
end